# SLCJ_organic

./: CMakeLists.txt  GNUmakefile  README.md  SLCJ.cc  SLCJ_manual.cc  vis.mac  vis2.mac
include/: SLCJDetectorConstruction.hh  SLCJEventAction.hh  SLCJPhysicsList.hh  SLCJPhysicsListMessenger.hh  SLCJPrimaryGeneratorAction.hh  SLCJRunAction.hh  SLCJStepMaxMessenger.hh  SLCJSteppingAction.hh  geometry.h
src/: SLCJDetectorConstruction.cc  SLCJEventAction.cc  SLCJPhysicsList.cc  SLCJPhysicsListMessenger.cc  SLCJPrimaryGeneratorAction.cc  SLCJRunAction.cc  SLCJSteppingAction.cc  geometry.cpp
